--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "css-loader": "^6.4.0",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.2.0",
     "style-loader": "^3.3.0",
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0",
